--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
       <div class="container">
             <div class="header">
-                  <img src="images/logo.svg" alt="">
+                  <img src="https://amyra123.github.io/landingPage/images/logo.svg" alt="">
             </div>
            
             <div class="left">
-                  <img src="images/illustration-mockups.svg" alt="" width="100%">
+                  <img src="https://amyra123.github.io/landingPage/images/illustration-mockups.svg" alt="" width="100%">
             </div>
             <div class="right">
                   <h2 class="head">Build the community your fans will love</h2>
